<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e5eef4 "
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="82dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/LogoImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            app:srcCompat="@drawable/bag" />

        <TextView
            android:id="@+id/LogoTextView"
            android:layout_width="290dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/e_shopping"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/createAccountButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="SetCreateAccountOnClick"
        android:text="@string/create_account"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/orTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="?attr/colorButtonNormal" />

    <Button
        android:id="@+id/signInButton"
        style="@android:style/Widget.Material.Light.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="SetSignInOnClick"
        android:text="@string/sign_in"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <Button
        android:id="@+id/asAGustButton"
        style="@android:style/Widget.Material.Light.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="SetAsAGustOnClick"
        android:text="@string/as_a_gust"
        android:textColor="@color/colorPrimary"
        android:visibility="gone"/>
</LinearLayout>