<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/mailImageView"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/mail" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="315dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/please_enter_email"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="4dp" />

    </LinearLayout>

    <Button
        android:id="@+id/resetPasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="SetResetPasswordOnClick"
        android:text="@string/click_to_get_email" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/mailImageView"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/email" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/reset_pass_step_one"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/mailImageView"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/login" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/reset_pass_step_two"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/mailImageView"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/database" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/reset_pass_three"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    </LinearLayout>

    <Button
        android:id="@+id/doneButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="SetDoneOnClick"
        android:text="@string/done_reset" />

</LinearLayout>